docs: fix misformatted yaml code

--- a/docs/guides/custom-code-rag.mdx
+++ b/docs/guides/custom-code-rag.mdx
@@ -79,7 +79,13 @@ After you've set up your server, you can configure Continue to use it by adding 
 config.yaml
 
 ```
-context:  - provider: http    params:      url: https://myserver.com/retrieve      name: http      description: Custom HTTP Context Provider      displayTitle: My Custom Context
+context:
+  - provider: http
+    params:
+      url: https://myserver.com/retrieve
+      name: http
+      description: Custom HTTP Context Provider
+      displayTitle: My Custom Context
 ```
 
 config.json
