--- a/docs/guides/set-up-codestral.mdx
+++ b/docs/guides/set-up-codestral.mdx
@@ -18,7 +18,15 @@ title: "How to Set Up Codestral"
 config.yaml
 
 ```
-models:  - name: Codestral    provider: mistral    model: codestral-latest    apiKey: <YOUR_CODESTRAL_API_KEY>    apiBase: https://codestral.mistral.ai/v1    roles:      - chat      - autocomplete
+models:
+  - name: Codestral
+    provider: mistral
+    model: codestral-latest
+    apiKey: <YOUR_CODESTRAL_API_KEY>
+    apiBase: https://codestral.mistral.ai/v1
+    roles:
+      - chat
+      - autocomplete
 ```
 
 config.json
