--- a/docs/reference.mdx
+++ b/docs/reference.mdx
@@ -61,7 +61,7 @@ Blocks:
 - `.continue/models` - for models
 - `.continue/prompts` - for prompts
 - `.continue/context` - for context providers
-- `.continue/docs` - for docs~~~~
+- `.continue/docs` - for docs
 - `.continue/data` - for data
 - `.continue/mcpServers` - for MCP Servers
 
