--- a/docs/troubleshooting.mdx
+++ b/docs/troubleshooting.mdx
@@ -92,7 +92,11 @@ If you're seeing a `fetch failed` error and your network requires custom certifi
 config.yaml
 
 ```
-models:  - name: My Model    ...    requestOptions:      caBundlePath: /path/to/cert.pem
+models:
+  - name: My Model
+    ...
+    requestOptions:
+      caBundlePath: /path/to/cert.pem
 ```
 
 config.json
