--- a/docs/guides/llama3.1.mdx
+++ b/docs/guides/llama3.1.mdx
@@ -21,7 +21,10 @@ Ollama is the fastest way to get up and running with local language models. We r
 config.yaml
 
 ```
-models:  - name: Llama 3.1 8b    provider: ollama    model: llama3.1-8b
+models:
+  - name: Llama 3.1 8b
+    provider: ollama
+    model: llama3.1-8b
 ```
 
 config.json
@@ -53,7 +56,11 @@ Groq provides the fastest available inference for open-source language models, i
 config.yaml
 
 ```
-models:  - name: Llama 3.3 70b Versatile    provider: groq    model: llama-3.3-70b-versatile    apiKey: <YOUR_GROQ_API_KEY>
+models:
+  - name: Llama 3.3 70b Versatile
+    provider: groq
+    model: llama-3.3-70b-versatile
+    apiKey: <YOUR_GROQ_API_KEY>
 ```
 
 config.json
@@ -85,7 +92,11 @@ Together AI provides fast and reliable inference of open-source models. You'll b
 config.yaml
 
 ```
-models:  - name: Llama 3.1 405b    provider: together    model: llama3.1-405b    apiKey: <YOUR_TOGETHER_API_KEY>
+models:
+  - name: Llama 3.1 405b
+    provider: together
+    model: llama3.1-405b
+    apiKey: <YOUR_TOGETHER_API_KEY>
 ```
 
 config.json
@@ -116,7 +127,11 @@ Replicate makes it easy to host and run open-source AI with an API.
 config.yaml
 
 ```
-models:  - name: Llama 3.1 405b    provider: replicate    model: llama3.1-405b    apiKey: <YOUR_REPLICATE_API_KEY>
+models:
+  - name: Llama 3.1 405b
+    provider: replicate
+    model: llama3.1-405b
+    apiKey: <YOUR_REPLICATE_API_KEY>
 ```
 
 config.json
@@ -148,7 +163,11 @@ SambaNova Cloud provides world record Llama3.1 70B/405B serving.
 config.yaml
 
 ```
-models:  - name: SambaNova Llama 3.1 405B    provider: sambanova    model: llama3.1-405b    apiKey: <YOUR_SAMBA_API_KEY>
+models:
+  - name: SambaNova Llama 3.1 405B
+    provider: sambanova
+    model: llama3.1-405b
+    apiKey: <YOUR_SAMBA_API_KEY>
 ```
 
 config.json
@@ -180,7 +199,11 @@ Cerebras Inference uses specialized silicon to provides fast inference for the L
 config.yaml
 
 ```
-models:  - name: Cerebras Llama 3.1 70B    provider: cerebras    model: llama3.1-70b    apiKey: <YOUR_CEREBRAS_API_KEY>
+models:
+  - name: Cerebras Llama 3.1 70B
+    provider: cerebras
+    model: llama3.1-70b
+    apiKey: <YOUR_CEREBRAS_API_KEY>
 ```
 
 config.json
