--- a/docs/customize/context/documentation.mdx
+++ b/docs/customize/context/documentation.mdx
@@ -77,7 +77,7 @@ Documentation sources may be suggested based on package files in your repo. This
 - Packages with partial information (with a pen icon) can be clicked to fill the form with the available information
 - Note that you can hover over the information icon to see where the package suggestion was found.
 
-![Add documentation form](/img/docs-form.png)
+![Add documentation form](/images/docs-form.png)
 
 ### In a configuration file
 
@@ -230,11 +230,11 @@ You can view indexing statuses and manage your documentation sites from the `@do
 - Failed indexing attempts will show an error status bar and icon
 - Delete a documentation site from your configuration using the trash icon
 
-![More Page @docs indexes section](/img/docs-indexes.png)
+![More Page @docs indexes section](/images/docs-indexes.png)
 
 You can also view the overall status of currently indexing docs from a hideable progress bar at the bottom of the chat page
 
-![Documentation indexing peek](/img/docs-indexing-peek.png)
+![Documentation indexing peek](/images/docs-indexing-peek.png)
 
 You can also use the following IDE command to force a re-index of all docs: `Continue: Docs Force Re-Index`.
 
