--- a/docs/customize/context/documentation.mdx
+++ b/docs/customize/context/documentation.mdx
@@ -212,8 +212,9 @@ If your documentation is private, you can skip the default crawler and use a loc
 </Tabs>
 
 <Info>
-  Chromium crawling has been deprecated
-  {/* The default local crawler is a lightweight tool that cannot render sites that are dynamically generated using JavaScript. If your sites need to be rendered, you can enable the experimental `Use Chromium for Docs Crawling` feature from your [User Settings Page](../deep-dives/settings.md) This will download and install Chromium to `~/.continue/.utils`, and use it as the local crawler. */}
+  The default local crawler is a lightweight tool that cannot render sites that are dynamically generated using JavaScript. If your sites need to be rendered, you can enable the experimental `Use Chromium for Docs Crawling` feature from your [User Settings Page](../settings) This will download and install Chromium to `~/.continue/.utils`, and use it as the local crawler.
+  
+  **Note:** Chromium crawling support is being deprecated and may be removed in future versions.
 </Info>
 
 Further notes:
@@ -400,4 +401,4 @@ The following configuration example includes:
   </Tab>
 </Tabs>
 
-{/* This could also involve enabling Chromium as a backup for local documentation the [User Settings Page](../deep-dives/settings.md). */}
+This setup could also involve enabling Chromium as a backup for local documentation through the [User Settings Page](../settings).
