--- a/docs/reference.mdx
+++ b/docs/reference.mdx
@@ -184,6 +184,8 @@ The `models` section defines the language models used in your configuration. Mod
 - `chatOptions`: If the model includes role `chat`, these settings apply for Chat and Agent mode:
 
   - `baseSystemMessage`: Can be used to override the default system prompt for **Chat** mode.
+  - `baseAgentSystemMessage`: Can be used to override the default system prompt for **Agent** mode.
+  - `basePlanSystemMessage`: Can be used to override the default system prompt for **Plan** mode.
 
 - `embedOptions`: If the model includes role `embed`, these settings apply for embeddings:
 
