--- a/docs/customize/deep-dives/rules.mdx
+++ b/docs/customize/deep-dives/rules.mdx
@@ -87,7 +87,7 @@ description: Standards for writing and maintaining Continue Docs
 
 # Continue Docs Standards
 
-- Follow Docusaurus documentation standards
+- Follow Mintlify documentation standards
 - Include YAML frontmatter with title, description, and keywords
 - Use consistent heading hierarchy starting with h2 (##)
 - Include relevant Admonition components for tips, warnings, and info
@@ -111,7 +111,7 @@ rules:
     globs: docs/**/*.{md,mdx}
     alwaysApply: false
     rule: >
-      - Follow Docusaurus documentation standards
+      - Follow Mintlify documentation standards
       - Include YAML frontmatter with title, description, and keywords
       - Use consistent heading hierarchy starting with h2 (##)
       - Include relevant Admonition components for tips, warnings, and info
